[project]
name = "openhound"
dynamic = ["version"]
description = "OpenGraph collector framework for BloodHound"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.3.0",
    "dlt==1.26.0",
    "duckdb==1.5.2",
    "griffe>=1.15.0",
    "griffe-fieldz>=0.5.0",
    "mkdocstrings[python]==1.0.4",
    "psutil>=7.2.1",
    "pydantic==2.13.3",
    "tqdm>=4.67.1",
    "typer==0.25.1",
    "cookiecutter>=2.6.0",
    "pydantic-extra-types>=2.11.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
all = [
    "openhound-jamf==0.1.0",
    "openhound-github==0.1.0",
    "openhound-okta==0.1.1",
]
jamf = [
    "openhound-jamf==0.1.0",
]
github = [
    "openhound-github==0.1.0"
]

okta = [
    "openhound-okta==0.1.1",
]

[project.scripts]
openhound = "openhound.main:app"

[build-system]
requires = ['hatchling', 'hatch-vcs']
build-backend = 'hatchling.build'

[tool.marimo.runtime]
dotenv = [".env"]

[tool.ruff]
exclude = ["src/openhound/cookiecutter-templates/*"]

[tool.mypy]
exclude = ["src/openhound/cookiecutter-templates/*"]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "openhound-faker==0.0.4",
    "ipython>=9.12.0",
    "pre-commit==4.6.0",
    "pytest>=9.0.1",
    "marimo==0.23.4",
    "altair==6.1.0",
    "fastapi==0.136.1",
    "zensical>=0.0.38",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.33.0.20260408",
    "httpx>=0.28.1",
    "antlr4-python3-runtime>=4.13.2",
]
